--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peppa Bingo Card</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Icon Source: https://www.deviantart.com/williamcaza/art/MarvelouzTube-TV-s-Peppa-Pig-Icon-1157173927 -->
+    <link rel="icon" type="image/png" href="assets/icon.png">
 </head>
 <body>
     <!-- <h1>Peppa Bingo Card</h1> -->
